Fix alignemnt

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -5,15 +5,15 @@
 }
 
 @media only screen and (max-width: 749px) {
-  .banner .banner__box {
+  .banner__box {
     text-align: center;
   }
 
-  .banner--mobile-content-align-right .banner__box {
+  .banner--content-align-mobile-right .banner__box {
     text-align: right;
   }
 
-  .banner--mobile-content-align-left .banner__box {
+  .banner--content-align-mobile-left .banner__box {
     text-align: left;
   }
 }
